module7/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: demo
  name: testpod
spec:
  containers:
  - name: busybox
    image: busybox:1.28
    args:
    - sleep
    - "9999"
