module7/resource.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod
spec:
  containers:
  - name: container01
    image: dummyimagename
    ports:
    - name: dns
      containerPort: 5553
      hostPort: 53
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod
spec:
  containers:
  - name: container01
    image: dummyimagename
    ports:
    - name: dns
      containerPort: 5553
      hostPort: 443
---
