module7/apply-add-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: apply-add-labels
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  rules:
  - name: add-labels
    match:
      resources:
        kinds:
        - Pod
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            owner: czoller
